Reboot Dialog, Reset naming

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -220,7 +220,7 @@
   <string id="32321">Virtual Private Networks</string>
   <string id="32322">Add new VPN configuration</string>  
   <string id="32323">Reset to Defaults</string>
-  <string id="32324">Reset XBMC to defaults</string>
+  <string id="32324">Reset System Settings to defaults</string>
   <string id="32325">Reset OpenELEC to defaults</string> 
   <string id="32326">Are you sure?</string>  
   <string id="32328">The system must reboot.</string> 
