--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -219,7 +219,7 @@
   <string id="32321">Virtelles Privates Netwerk</string>
   <string id="32322">Neues VPN anlegen</string>
   <string id="32323">Zurücksetzen</string>
-  <string id="32324">XBMC in den Auslieferungszustand zurücksetzen</string>
+  <string id="32324">Einstellungen in den Auslieferungszustand zurücksetzen</string>
   <string id="32325">OpenELEC in den Auslieferungszustand zurücksetzen</string> 
   <string id="32326">Sind Sie sicher ?</string>  
   <string id="32328">Dieser Vorgang erfordert einen Neustart.</string>    
