--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2013-04-08 v-0.1.11
+  (fix) bluetooth error on enable / disable
+  (change) Bluetooth Agent redesign, monitor dbus always.
+  (change) restore: delete file on abort. ask for reboot on success
+
 2013-04-04 v-0.1.10
   (fix) delete backup file on abort
   (change) backup / restore write tar file. bzip is bit slow
