--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 2013-06-16 v-0-1-21
   (fix) remove cpupower
-
+  (change) add blue bottom line to all categories
+  (change) add scrollbar to all lists
+  
 2013-06-05 v-0-1-20
   (fix) network autoconnect bugg
   (fix) dns, ntp, domains on change network from manual to dhcp
