--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-06-17 v0.1.22
+  (updated) language files from Transifex
+
 2013-06-16 v-0-1-21
   (fix) remove cpupower
   (change) add blue bottom line to all categories
