--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2013-06-23 v0.1.23
+  (fix) unicode problems
+  (fix) update manual
+
 2013-06-17 v0.1.22
   (updated) language files from Transifex
 
