--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+2013-07-13 v0.1.25
+  (change) read SYSTEMID from /etc/machine-id
+  (change) replace /storage/.xbmc with oe.XBMC_USER_HOME
+  (change) replace /storage/.config with oe.USER_CONFIG
+  (change) replace /storage/.cache with oe.CONFIG_CACHE
+  
 2013-07-08 v0.1.24
   (fix) Use target/* from updatefile
 
