--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 2013-07-13 v0.1.25
+  (updated) language files from Transifex
   (change) read SYSTEMID from /etc/machine-id
   (change) replace /storage/.xbmc with oe.XBMC_USER_HOME
   (change) replace /storage/.config with oe.USER_CONFIG
