rework backup. bump - handle mountpoints under backupdir, we don't want to   backup external drives accidently mounted under backupdirs   we also don't include these in get_folder_size - handle all files (including fifos, symlinks etc, not   only regular files

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-2013-07-13 v0.1.25
+2013-07-14 v0.1.25
+  (fix) backup. handle mountpoints under backupdirs
+  (fix) backup. do not dereference symlinks
+  (fix) backup: do not skip empty dirs
   (updated) language files from Transifex
   (change) read SYSTEMID from /etc/machine-id
   (change) replace /storage/.xbmc with oe.XBMC_USER_HOME
