--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
+2013-07-18 v0.1.29
+  (change) fix bluetooth entry in service menu
+  (change) disable logging until OE DEBUG != true
+  
 2013-07-18 v0.1.28
   (change) use subprocess.Popen() instead of os.system() to start services
-
+  
 2013-07-18 v0.1.27
   (change) move ssh config file to $CONFIG_CACHE
   (fix) save service config files on startup
