--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2013-07-29 v0.1.31
+  (change) menu loader redesign
+  (fix) kill update thread on exit
+  
 2013-07-23 v0.1.30
   (change) use subprocess.Popen to start LCDd
   (fix) stop LCDd on driver change
