--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-08-02 v0.1.32
+  (fix) wizard fail after menu redesign
+  
 2013-07-29 v0.1.31
   (change) menu loader redesign
   (fix) kill update thread on exit
