--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2013-08-07 v0.2.1
+  (fix) ssh menu 
+  (fix) syslog menu
+  (add) obex file transfer agent
+  
 2013-08-02 v0.2.0
   (change) initial release for dbus redesign
   
