--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -270,6 +270,14 @@ msgctxt "#750"
 msgid "750"
 msgstr ""
 
+msgctxt "#751"
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to OpenELEC."
+msgstr ""
+
+msgctxt "#752"
+msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
+msgstr ""
+
 #empty strings from id 751 to 31999
 
 msgctxt "#32000"
@@ -975,7 +983,7 @@ msgid "Enter the following Key on your Device."
 msgstr ""
 
 msgctxt "#32344"
-msgid "Disable Bluetooth"
+msgid "Enable Bluetooth"
 msgstr ""
 
 msgctxt "#32345"
@@ -1130,4 +1138,12 @@ msgstr ""
 
 msgctxt "#32383"
 msgid "Play Files ?"
+msgstr ""
+
+msgctxt "#32384"
+msgid "OBEX Enabled"
+msgstr ""
+
+msgctxt "#32385"
+msgid "OBEX Upload Folder"
 msgstr ""
