--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2013-08-12 v0.2.6
+  (fix) cpu flag x64
+  (fix) some minor execute return values
+  (add) systemd service configuration
+  
 2013-08-11 v0.2.5
   (fix) update temp directory
   
