--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-09-07 v0.2.11
+  (fix) dns/ntp sort order on save
+
 2013-08-20 v0.2.9
   (fix) wait for execute to close
   (fix) dont restart services (SYSTEMD) on startup
