--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-09-12 v0.2.13
+  (updated) language files from Transifex
+
 2013-09-09 v0.2.12
   (fix) do not check for update if /storage/.update/SYSTEM exists
 
