--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+2013-09-22 v0.2.14
+  (fix) powersaving if boot=/dev/xxx
+  (remove) network mounts
+  (updated) language files from Transifex
+  (updated) reset help hints
+
 2013-09-12 v0.2.13
   (updated) language files from Transifex
 
