--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-2013-09-22 v0.2.14
+2013-09-19 v0.2.15
+  (fix) network wait values not corectly loaded in HUI
+
+2013-09-18 v0.2.14
   (fix) powersaving if boot=/dev/xxx
   (remove) network mounts
   (updated) language files from Transifex
