--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2013-10-02 v0.3.0
+  (fix) ssh / samba in wizard
+  (change) cleanup non-systemd
+  (remove) syslog
+
 2013-09-25 v0.2.16
   (add) disable update on netboot
 
