--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-10-02 v0.3.1 
+  (add) Bluetooth Standby Support
+  
 2013-10-02 v0.3.0
   (fix) ssh / samba in wizard
   (change) cleanup non-systemd
