--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1171,3 +1171,7 @@ msgstr ""
 msgctxt "#32389"
 msgid "Disable Standby"
 msgstr ""
+
+msgctxt "#32390"
+msgid "Settings addon is not yet ready, please again later."
+msgstr ""
