--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1173,5 +1173,5 @@ msgid "Disable Standby"
 msgstr ""
 
 msgctxt "#32390"
-msgid "Settings addon is not yet ready, please again later."
+msgid "Settings addon is not yet ready, please try again later."
 msgstr ""
