--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 2013-10-02 v0.3.1 
   (add) keyboard layout variants
   (add) Bluetooth Standby Support
+  (fix) netlist refresh
   
 2013-10-02 v0.3.0
   (fix) ssh / samba in wizard
