--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2013-10-27 v0.2.20
+  (fix) update: sync before reboot
+
 2013-10-05 v0.2.19
   (fix) bluetooth standby
   (change) do not spindown /storage
